k8s/core/test6/overlays/eks/gnoweb/gnoweb-tls-ingress-eks.yaml
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: gnoweb-ingress-tls
  namespace: gno
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`gnoweb.test6.gnoteam.com`) || Host(`test6.gno.land`)
    kind: Rule
    services:
    - name: gnoweb
      namespace: gno
      port: gnoweb-port
  tls:
    certResolver: gnoresolver
